tests/compile-fail/integration__integration__type_check__times.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: type error
   ┌─ <input>:28:15
   │
28 │         times(F0) {}  // count
   │               ^^ a float
   │
   = an integer is required

error: type error
   ┌─ <input>:29:20
   │
29 │         times(F0 = 4) {}  // clobber
   │               --   ^ an integer
   │               │     
   │               a float


